--- a/src/style/theme/element.scss
+++ b/src/style/theme/element.scss
@@ -8,3 +8,13 @@
   padding: 20px !important;
   border-top: 1px solid #ebeef5;
 }
+
+
+.el-table{
+  .el-table__cell{
+    .cell{
+      word-break: break-all;
+      white-space: nowrap;
+    }
+  }
+}
